fix: update animal